# harmlessmonitor

./: .gitignore  README.md
dlp-backend/: .env.example  capture_service.py  enrichment_service.py  main.py  requirements.txt  risk_engine.py  simulation_service.py  test_geoip.py
dlp-frontend/: index.html  package-lock.json  package.json
dlp-frontend/src/: App.tsx  DLPDashboard.tsx  index.css
dlp-frontend/src/components/: AIAnalyst.tsx  Alerts.tsx  DestinationIntelligence.tsx  Integrations.tsx  LiveSessions.tsx  Overview.tsx  PacketExplorer.tsx  Settings.tsx
dlp-frontend/src/components/alerts/: AlertPanel.tsx
dlp-frontend/src/components/charts/: SankeyChart.tsx  WorldMap.tsx
dlp-frontend/src/components/drawer/: InvestigationDrawer.tsx
dlp-frontend/src/components/layout/: Header.tsx  Layout.tsx
dlp-frontend/src/components/shared/: HistoryTab.tsx  SettingsTab.tsx
dlp-frontend/src/components/viz/: GeoMap.tsx  GroupedForceGraph.tsx
dlp-frontend/src/data/: demoFlows.ts
dlp-frontend/src/hooks/: useWebSocket.ts
dlp-frontend/src/services/: aiAnalyzer.ts
dlp-frontend/src/store/: useDlpStore.ts  useSettingsStore.ts
dlp-frontend/src/types/: index.ts
dlp-frontend/src/utils/: flowAnalysis.ts  geoResolve.ts  ipOrg.ts
dlp-sensor/: Cargo.toml
dlp-sensor/src/: classifier.rs  main.rs  patterns.rs  ws_server.rs
