[package]
name = "dlp-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1.2"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
etherparse = "0.20.1"
